--- a/conf/local/client1.conf
+++ b/conf/local/client1.conf
@@ -1,9 +1,9 @@
 [general]
 remote_endpoints="tcp://127.0.0.1:51230","tcp://127.0.0.1:51231"
-local_endpoints="tcp://127.0.0.1:51231"
-local_nodes=1
+local_endpoints="tcp://127.0.0.1:51233"
+local_nodes=2
 
-local_id="h8m9jFrEqu4bOcUBxYilGQMsYXE="
+local_id="y-TthiduatPNAbascesDLfjw8j0=", "ngsAR8B-NQdtCTF2saPU-Pg_IVQ="
 server_ids="QUTDkL8mYss2gBw-E2fx1GGAh2w=","h8m9jFrEqu4bOcUBxYilGQMsYXE="
 round_type="null/csdcnet"
 
@@ -11,7 +11,7 @@ auth=true
 path_to_private_keys=private
 path_to_public_keys=public
 
-console=false
+console=true
 exit_tunnel=false
-log="server1.log"
+log="client1.log"
 multithreading=true
