--- a/conf/local/server0.conf
+++ b/conf/local/server0.conf
@@ -1,10 +1,10 @@
 [general]
-remote_endpoints="tcp://10.1.0.1:51230","tcp://10.1.0.2:51230","tcp://10.1.0.3:51230"
-local_endpoints="tcp://10.1.0.1:51230"
+remote_endpoints="tcp://127.0.0.1:51230","tcp://127.0.0.1:51231"
+local_endpoints="tcp://127.0.0.1:51230"
 local_nodes=1
 
 local_id="QUTDkL8mYss2gBw-E2fx1GGAh2w="
-server_ids="QUTDkL8mYss2gBw-E2fx1GGAh2w=","h8m9jFrEqu4bOcUBxYilGQMsYXE=","9cLwIW23_RAtmxbzAsA6Rd6_3ME="
+server_ids="QUTDkL8mYss2gBw-E2fx1GGAh2w=","h8m9jFrEqu4bOcUBxYilGQMsYXE="
 round_type="null/csdcnet"
 
 auth=true
@@ -12,6 +12,6 @@ path_to_private_keys=private
 path_to_public_keys=public
 
 console=false
-exit_tunnel=true
+exit_tunnel=false
 log="server0.log"
 multithreading=true
